--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <section class="top-image">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1> <span class="name-highlight">Mosharaf</span> UI/UX Designer</h1>
+            <p> I am a professional Graphic and UI/UX designer. I have more than three years of experience in Graphic Design and two years of experience in UI/UX Design. My services include Web UI Design, Landing page Design, Mobile App Design,  etc. And I also have experience in T-shirt design and brand designing.</p>
+        </div>
+        <div class="half-width">
+            <img src="images/profile.png" alt="profile">
+        </div>
+    </section>
+    
 </body>
 </html>
