--- a/index.html
+++ b/index.html
@@ -5,20 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="top-image">
         <div class="half-width">
-            <h1>Welcome to</h1>
-            <h1> <span class="name-highlight">Mosharaf</span> UI/UX Designer</h1>
-            <p> I am a professional Graphic and UI/UX designer. I have more than three years of experience in Graphic Design and two years of experience in UI/UX Design. My services include Web UI Design, Landing page Design, Mobile App Design,  etc. And I also have experience in T-shirt design and brand designing.</p>
+            <h1>Welcome to <br> <span class="color-highlight">Mosharaf</span> UI/UX Designer</h1>
+            <p class="p-text"> I am a professional Graphic and UI/UX designer. I have more than three years of experience in Graphic Design and two years of experience in UI/UX Design.</p>
+            <a class="link-button" target="_blank" href="google.com">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/profile.png" alt="profile">
         </div>
+        
     </section>
-    
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h4>Become a Web Developer.</h4>
+            <p class="p-text"> I am a professional Graphic and UI/UX designer. I have more than three years of experience in Graphic Design and two years of experience in UI/UX Design.</p>
+            <a class="link-button" target="_blank" href="google.com">Download Resume</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experience</h2>
+        <div id="full-stack" class="half-width box-style">
+            <h2>Full Stack Web Developer</h2>
+            <h4 class="color-highlight">2021-Present | UI-UX & Web Developer</h4>
+            <p class="text-c">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas aliquid distinctio voluptatum, at laudantium facere tempore quam expedita rem labore. Illum corrupti aliquam quas! Sed perferendis sunt, itaque beatae neque vitae magnam eos tempore accusantium numquam, maiores, veritatis explicabo ipsa.</p>
+        </div>
+        <div id="exp-o" class="half-width box-style">
+            <h2>Full Stack Web Developer</h2>
+            <h4 class="color-highlight">2021-Present | UI-UX & Web Developer</h4>
+            <p class="text-c">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas aliquid distinctio voluptatum, at laudantium facere tempore quam expedita rem labore. Illum corrupti aliquam quas! Sed perferendis sunt.</p>
+        </div>
+    </section>
+    <footer>
+        <p class="footer">Copyright by Mosharaf</p>
+    </footer>
 </body>
 </html>
